--- a/exim/exim.conf
+++ b/exim/exim.conf
@@ -1,2 +1,2 @@
-# This configures the directives used for s6-log in the log service.
-DIRECTIVES="n3 s2000000 T"
+# Optional arguments for the exim daemon
+OPTS=""
